Fix overflow on edit

--- a/src/app/view/perspectives/post-it/document/post-it-document.component.scss
+++ b/src/app/view/perspectives/post-it/document/post-it-document.component.scss
@@ -78,6 +78,10 @@
     width: 100%;
     pointer-events: none;
     text-overflow: ellipsis;
+
+    &:focus {
+      text-overflow: clip;
+    }
   }
 
   input:read-only:focus {
